# rust-contracts-stylus

.github/workflows/: check.yml  test.yml
benches/src/: erc20.rs
contracts-proc/src/: interface_id.rs
lib/crypto/: Cargo.toml
