[package]
name = "openzeppelin-crypto"
description = "Cryptographic Utilities"
edition.workspace = true
categories = ["cryptography", "algorithms", "no-std", "wasm"]
keywords = ["crypto", "web3", "blockchain", "merkle"]
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
mini-alloc.workspace = true
tiny-keccak.workspace = true

[dev-dependencies]
hex-literal = "1.0.0"
rand.workspace = true

[features]
std = []

[lints]
workspace = true
